AccountController and BalanceController added, services updated